PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Valid/ImmutableGlobalVariable.pf
module ImmutableGlobalVariable {

    i Int = 0

    fun testSomething() : Int {
         i Int = 0
         a Int = 0
         i = 2
        return i
    }
}