PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Invalid/ImmutableGlobalVariable.pf
module ImmutableGlobalVariable {

    i Int = 0

    fun testSomething() : Int {
         i = 0

        return i
    }
}